rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__display__everything.snap
---
source: rusqlite_migration/src/tests/display.rs
expression: everything
snapshot_kind: text
---
M(up: "UP", up hook, down: "DOWN", down hook, foreign key check, comment: "Comment, likely a filename in practice!")
