rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__display__up_only_alt.snap
---
source: rusqlite_migration/src/tests/display.rs
expression: "format!(\"{:#}\", m_valid0_up())"
snapshot_kind: text
---
M(
    up: "CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);"
)
